--- a/SinaWeibo/Main/首页/View/Home.storyboard
+++ b/SinaWeibo/Main/首页/View/Home.storyboard
@@ -36,13 +36,24 @@
                     <view key="view" contentMode="scaleToFill" id="5n1-oH-NZq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="69v-bb-ybb">
+                                <rect key="frame" x="149" y="133" width="77" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="登录微博"/>
+                                <connections>
+                                    <action selector="loginWeibo:" destination="gbz-gx-thB" eventType="touchUpInside" id="9iP-jK-J74"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <navigationItem key="navigationItem" id="ccb-So-N3j"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MF7-ex-C8E" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="143" y="166"/>
+            <point key="canvasLocation" x="141.59999999999999" y="165.96701649175412"/>
         </scene>
     </scenes>
 </document>
