--- a/SinaWeibo/Main/首页/View/Home.storyboard
+++ b/SinaWeibo/Main/首页/View/Home.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller-->
+        <!--Base Navigation Controller-->
         <scene sceneID="HYi-7M-YZx">
             <objects>
-                <navigationController id="Np4-vA-xd6" sceneMemberID="viewController">
+                <navigationController id="Np4-vA-xd6" customClass="BaseNavigationController" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="7Dw-Wc-YmX">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
