--- a/SinaWeibo/Main/首页/View/Home.storyboard
+++ b/SinaWeibo/Main/首页/View/Home.storyboard
@@ -37,23 +37,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="69v-bb-ybb">
-                                <rect key="frame" x="149" y="133" width="77" height="30"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TR8-M3-Zvl">
+                                <rect key="frame" x="52" y="129" width="149" height="142"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="登录微博"/>
-                                <connections>
-                                    <action selector="loginWeibo:" destination="gbz-gx-thB" eventType="touchUpInside" id="9iP-jK-J74"/>
-                                </connections>
-                            </button>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <navigationItem key="navigationItem" id="ccb-So-N3j"/>
+                    <connections>
+                        <outlet property="imageView" destination="TR8-M3-Zvl" id="xuj-v2-ha3"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MF7-ex-C8E" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="141.59999999999999" y="165.96701649175412"/>
+            <point key="canvasLocation" x="141.59999999999999" y="165.06746626686657"/>
         </scene>
     </scenes>
 </document>
