--- a/SinaWeibo/Main/更多/View/More.storyboard
+++ b/SinaWeibo/Main/更多/View/More.storyboard
@@ -36,13 +36,33 @@
                     <view key="view" contentMode="scaleToFill" id="RNK-3z-eV4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AcP-Kg-C5G">
+                                <rect key="frame" x="87" y="226" width="50" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="0.90162466808709796" blue="0.36836560850955369" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="cat"/>
+                                <connections>
+                                    <action selector="cat:" destination="VH9-eS-s6M" eventType="touchUpInside" id="E8a-qo-KC0"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qB7-dK-uBx">
+                                <rect key="frame" x="78" y="178" width="68" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.5461130327" green="1" blue="0.39230799170000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="bluemoon"/>
+                                <connections>
+                                    <action selector="bluemoon:" destination="VH9-eS-s6M" eventType="touchUpInside" id="bQ5-wc-5L6"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="0.41308129370000002" green="0.64894427040000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <navigationItem key="navigationItem" id="Jgy-9G-Ntm"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qcJ-td-ilF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="46" y="204"/>
+            <point key="canvasLocation" x="45.600000000000001" y="203.74812593703149"/>
         </scene>
     </scenes>
 </document>
