--- a/SinaWeibo/Main/发现/View/Discover.storyboard
+++ b/SinaWeibo/Main/发现/View/Discover.storyboard
@@ -25,7 +25,7 @@
             </objects>
             <point key="canvasLocation" x="-718" y="170"/>
         </scene>
-        <!--Discover View Controller-->
+        <!--发现-->
         <scene sceneID="m2L-rm-9P5">
             <objects>
                 <viewController id="PKi-Ei-wAW" customClass="DiscoverViewController" sceneMemberID="viewController">
@@ -38,7 +38,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="0.43130686247203986" blue="0.18775906665061348" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <navigationItem key="navigationItem" id="2tu-ET-aus"/>
+                    <navigationItem key="navigationItem" title="发现" id="2tu-ET-aus"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eEe-dp-LVJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
