--- a/SinaWeibo/Main/消息/View/Message.storyboard
+++ b/SinaWeibo/Main/消息/View/Message.storyboard
@@ -25,7 +25,7 @@
             </objects>
             <point key="canvasLocation" x="-553" y="139"/>
         </scene>
-        <!--Message View Controller-->
+        <!--消息-->
         <scene sceneID="DAd-FF-huK">
             <objects>
                 <viewController id="wwK-B3-HKj" customClass="MessageViewController" sceneMemberID="viewController">
@@ -38,7 +38,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="0.8764952734420064" blue="0.17101594510359441" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <navigationItem key="navigationItem" id="5Pu-BU-sNw"/>
+                    <navigationItem key="navigationItem" title="消息" id="5Pu-BU-sNw"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="r5n-xh-OLB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
